--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ICC Cricket Stats & Player Recognition</title>
-  <!-- Font Awesome for icons (optional) -->
+  <title>ICC Cricket Stats Portal</title>
+  <!-- Font Awesome (optional for icons) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-dYc1/1A3pJ1+NjNafc1/0xHbUnN1R51pWJ8e4m1Gm+Y6UCBubWXJTHW3aZh8LYh+9p3PjKZqjU+nIVIcq+8L0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     /* Global Styles */
     body {
       margin: 0;
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
       background: linear-gradient(135deg, #0a0a0a, #2c3e50);
       color: #fff;
       overflow-x: hidden;
@@ -32,14 +32,12 @@
       top: 10px;
       left: 20px;
     }
-    /* Music Player: Hide default controls */
-    audio {
-      display: none;
-    }
+    /* Hide default audio controls */
+    audio { display: none; }
     /* Main Container */
     .container {
       max-width: 600px;
-      margin: 60px auto 100px auto;
+      margin: 60px auto 120px auto;
       padding: 20px;
       background: rgba(0, 59, 73, 0.85);
       border-radius: 12px;
@@ -49,16 +47,16 @@
     .input-section {
       margin-bottom: 20px;
     }
-    .input-section input {
+    .input-section input, .input-section select {
       padding: 12px;
       font-size: 1rem;
-      width: 70%;
+      width: 80%;
+      margin: 8px 0;
       border: none;
       border-radius: 4px;
-      margin-right: 5px;
     }
     .input-section button {
-      padding: 12px 18px;
+      padding: 12px 20px;
       font-size: 1rem;
       background-color: #00bcd4;
       border: none;
@@ -110,6 +108,16 @@
       margin: 10px 0;
       font-size: 1.1rem;
     }
+    /* Additional performance input section */
+    .performance-inputs {
+      margin-top: 20px;
+      display: none;
+    }
+    .performance-inputs input {
+      width: 60%;
+      margin: 6px auto;
+      display: block;
+    }
     /* Footer */
     footer {
       text-align: center;
@@ -140,11 +148,10 @@
   <!-- Header with ICC Logo -->
   <header>
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d4/International_Cricket_Council_%28logo%29.svg/512px-International_Cricket_Council_%28logo%29.svg.png" alt="ICC Logo" class="logo">
-    <h1>ICC Cricket Stats & Player Recognition</h1>
+    <h1>ICC Cricket Stats Portal</h1>
   </header>
 
-  <!-- Background Music -->
-  <!-- Replace the src URL with your permitted ICC theme music file if available -->
+  <!-- Background Music (sample track; replace with permitted track as needed) -->
   <audio id="icc-music" loop autoplay>
     <source src="https://www.bensound.com/bensound-music/bensound-creativeminds.mp3" type="audio/mp3">
     Your browser does not support the audio element.
@@ -152,114 +159,18 @@
 
   <!-- Main Container -->
   <div class="container">
+    <!-- Player Identification Input -->
     <div class="input-section">
-      <input type="text" id="playerName" placeholder="Enter Player Name (e.g., virat kohli)" />
-      <button onclick="searchPlayer()">Search</button>
+      <input type="text" id="playerName" placeholder="Enter Player Name (e.g., Virat Kohli)" />
+      <select id="role">
+        <option value="">Select Role</option>
+        <option value="batter">Batter</option>
+        <option value="bowler">Bowler</option>
+      </select>
+      <button onclick="identifyPlayer()">Identify Player</button>
     </div>
 
-    <!-- Stats Card -->
-    <div class="stats-card" id="statsCard">
-      <img id="playerImage" class="player-image" src="" alt="Player Image">
-      <h2 id="playerNameDisplay"></h2>
-      <div class="flag-container">
-        <img id="playerFlag" class="flag" src="" alt="Country Flag">
-        <span id="playerCountry"></span>
-      </div>
-      <div class="player-stats">
-        <span id="battingStats">Batting: -</span>
-        <span id="bowlingStats">Bowling: -</span>
-      </div>
-    </div>
-  </div>
-
-  <!-- Footer -->
-  <footer>
-    ICC Cricket Stats & Player Recognition | Powered by HTML, CSS, and JavaScript
-  </footer>
-
-  <!-- JavaScript Code -->
-  <script>
-    // Lowercase keys for case-insensitive search
-    const players = {
-      "virat kohli": {
-        country: "India",
-        flag: "https://flagcdn.com/w320/in.png",
-        batting: "Avg: 52.04, SR: 130+",
-        bowling: "N/A",
-        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Virat_Kohli_2017.jpg/800px-Virat_Kohli_2017.jpg"
-      },
-      "rohit sharma": {
-        country: "India",
-        flag: "https://flagcdn.com/w320/in.png",
-        batting: "Avg: 48.96, SR: 140+",
-        bowling: "N/A",
-        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Rohit_Sharma_%28Indian_cricketer%29.jpg/800px-Rohit_Sharma_%28Indian_cricketer%29.jpg"
-      },
-      "ms dhoni": {
-        country: "India",
-        flag: "https://flagcdn.com/w320/in.png",
-        batting: "Avg: 40.99, SR: 87 (Test)",
-        bowling: "N/A",
-        image: "https://upload.wikimedia.org/wikipedia/commons/0/0f/MS_Dhoni_2019.jpg"
-      },
-      "shaheen afridi": {
-        country: "Pakistan",
-        flag: "https://flagcdn.com/w320/pk.png",
-        batting: "N/A",
-        bowling: "Econ: 4.57, SR: 24",
-        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Shaheen_Shah_Afridi_2021.jpg/800px-Shaheen_Shah_Afridi_2021.jpg"
-      },
-      "david warner": {
-        country: "Australia",
-        flag: "https://flagcdn.com/w320/au.png",
-        batting: "Avg: 44.88, SR: 138+",
-        bowling: "N/A",
-        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/David_Warner_2019.jpg/800px-David_Warner_2019.jpg"
-      },
-      "ben stokes": {
-        country: "England",
-        flag: "https://flagcdn.com/w320/gb-eng.png",
-        batting: "Avg: 39.34, SR: 105+",
-        bowling: "Econ: 4.87, SR: 38",
-        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Ben_Stokes_%28England_cricketer%29.jpg/800px-Ben_Stokes_%28England_cricketer%29.jpg"
-      },
-      "chris gayle": {
-        country: "West Indies",
-        flag: "https://flagcdn.com/w320/jm.png",
-        batting: "Avg: 40.47, SR: 120+",
-        bowling: "N/A",
-        image: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Chris_Gayle_2016.jpg/800px-Chris_Gayle_2016.jpg"
-      }
-      // Add more players as needed in lowercase...
-    };
-
-    function searchPlayer() {
-      // Get user input and convert to lowercase for matching
-      let inputName = document.getElementById("playerName").value.trim().toLowerCase();
-      if (!inputName) {
-        alert("Please enter a player name.");
-        return;
-      }
-      if (players.hasOwnProperty(inputName)) {
-        let player = players[inputName];
-        // Display the stats card
-        document.getElementById("statsCard").style.display = "block";
-        document.getElementById("playerNameDisplay").innerText = capitalize(inputName);
-        document.getElementById("playerFlag").src = player.flag;
-        document.getElementById("playerCountry").innerText = player.country;
-        document.getElementById("battingStats").innerText = "Batting: " + player.batting;
-        document.getElementById("bowlingStats").innerText = "Bowling: " + player.bowling;
-        document.getElementById("playerImage").src = player.image;
-      } else {
-        alert("Player not found! Please try another name.");
-      }
-    }
-
-    // Helper function to capitalize each word
-    function capitalize(str) {
-      return str.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' ');
-    }
-  </script>
-
-</body>
-</html>
+    <!-- Performance Input Section (shown after identification) -->
+    <div class="performance-inputs" id="performanceInputs">
+      <div id="batterInputs" style="display: none;">
+        <input type="number"
